8261927: WebKit build fails with Visual Studio 2017